tests/invalid/ArrayConversion_Invalid_1.whiley
function f(byte[] ls) -> int:
    return 0

public export method test():
    f([1, 2, 3])
